--- a/themes/next/source/css/_custom/custom.styl
+++ b/themes/next/source/css/_custom/custom.styl
@@ -1,1 +1,31 @@
 // Custom styles.
+
+//背景图片相关
+@media screen and (min-width:1200px) {
+
+    body {
+    background-image:url(http://p8x1t721u.bkt.clouddn.com/backgroundImage.jpg);
+    background-repeat: no-repeat;
+    background-attachment:fixed;
+    background-position:50% 50%;
+    background-size: cover
+    }
+
+    #footer a {
+        color:#eee;
+    }
+}
+
+//改变背景色和透明度
+.main-inner {
+    background: #fff;
+    opacity: 0.9;
+}
+
+.site-author-image {
+  border-radius: 100%;
+  padding: 2px;
+  border: 2px dashed #fff;
+  animation: cycle 2s 0.5s forwards;
+  transition: border-radius 2s;
+}
